shared-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output
  labels:
    name: log-output
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/status"
            backend:
              service:
                name: log-output
                port:
                  number: 2345
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: pingpong
                port:
                  number: 2345
